WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188054
Switching tabs should not close PiP window
https://bugs.webkit.org/show_bug.cgi?id=188054
Summary
Switching tabs should not close PiP window
Eric Carlson
Reported
2018-07-26 07:42:34 PDT
The changes for
bug 187623
cause the PiP window to close when switching tabs.
Attachments
Patch
(4.24 KB, patch)
2018-07-26 07:58 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2018-07-26 07:43:10 PDT
<
rdar://problem/41212379
>
Eric Carlson
Comment 2
2018-07-26 07:58:53 PDT
Created
attachment 345843
[details]
Patch
Radar WebKit Bug Importer
Comment 3
2018-07-26 09:25:43 PDT
<
rdar://problem/42626485
>
Jon Lee
Comment 4
2018-07-26 09:50:43 PDT
rdar://problem/42599543
WebKit Commit Bot
Comment 5
2018-07-26 10:03:45 PDT
Comment on
attachment 345843
[details]
Patch Clearing flags on attachment: 345843 Committed
r234264
: <
https://trac.webkit.org/changeset/234264
>
WebKit Commit Bot
Comment 6
2018-07-26 10:03:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug